--- a/Frontend/src/app/pages/centralized-testing/testing-results/testing-results.component.html
+++ b/Frontend/src/app/pages/centralized-testing/testing-results/testing-results.component.html
@@ -1,1 +1,8 @@
-<p>testing-results works!</p>
+<h1 class="title">
+  Результаты
+</h1>
+
+<div class="results-stats">
+  <div>Пройдено за <span>{{ testResults.timeSpent }}</span></div>
+  <div>Правильно выполнено <span>{{ testResults.correctAnswersCount }}</span>/30</div>
+</div>
