--- a/Frontend/src/app/pages/centralized-testing/test-initialization/test-initialization.component.html
+++ b/Frontend/src/app/pages/centralized-testing/test-initialization/test-initialization.component.html
@@ -14,6 +14,7 @@
       <button
         (click)="setSubject('physics')"
         class="physics-button"
+        [disabled]="true"
         [ngClass]="{ 'selected': physicsSelected }"
       >
         Физика
